tests/functional/lang/eval-fail-assert-let-equal-attrs.err.exp
error:
       … while evaluating the condition of the assertion '(let x = { b = 1; }; y = { b = 2; }; in (x == y))'
         at /pwd/lang/eval-fail-assert-let-equal-attrs.nix:1:1:
            1| assert
             | ^
            2|   let

       … while comparing attribute 'b'

       … where left hand side is
         at /pwd/lang/eval-fail-assert-let-equal-attrs.nix:4:7:
            3|     x = {
            4|       b = 1;
             |       ^
            5|     };

       … where right hand side is
         at /pwd/lang/eval-fail-assert-let-equal-attrs.nix:7:7:
            6|     y = {
            7|       b = 2;
             |       ^
            8|     };

       error: an integer with value '1' is not equal to an integer with value '2'
